--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
         SSH: true
-        REPOSITORY_NAME: keycloak/keycloak.github.io
+        REPOSITORY_NAME: keycloak-archive/keycloak-archive.github.io
         BRANCH: main
         FOLDER: target/web
         CLEAN: true
